# Motion_Planning_Final

./: .gitignore  README.md  notes.txt  path_result.txt
Scratch/: aabb_class.cpp
ompl-1.5.2/: CMakeLists.txt
ompl-1.5.2/asen5519_final_dev/: CMakeLists.txt  Obstacle.cpp  Obstacle.h  TestingGeometric3D.cpp  ThreeDGeometricPlanner_UAV.cpp  kinodynamicRRTPlanner.cpp  kinodynamicSSTPlanner.cpp
ompl-1.5.2/src/ompl/: CMakeLists.txt
ompl-1.5.2/src/ompl/base/: Obstacle.h  OptimizationObjective.h
ompl-1.5.2/src/ompl/base/objectives/: MechanicalWorkOptimizationObjective.h  MinimaxObjective.h  PathLengthOptimizationObjective.h  StateCostIntegralObjective.h  VFMechanicalWorkOptimizationObjective.h  VFUpstreamCriterionOptimizationObjective.h
ompl-1.5.2/src/ompl/base/src/: Obstacle.cpp  (+1 more)
ompl-1.5.2/src/ompl/final_project_dev/: TestingGeometric3D.cpp
results/: costplotting.m  dynamics_testing.m  geo_result_goal1.txt  geo_result_goal2.txt  geo_result_goal3.txt  geo_result_goal4.txt  geo_result_goal5.txt  geo_result_goal6.txt  geo_result_goal7.txt  goal1path.txt  goal2path.txt  kino_result_goal1.txt  kino_result_goal2.txt  kino_result_goal3.txt  kino_result_goal4.txt  kino_result_goal5.txt  kino_result_goal6.txt  kino_result_goal7.txt  kinodynamic_SSTresult.txt  kinodynamic_SSTresult1.txt  kinodynamic_SSTresult2.txt  kinodynamic_SSTresult3.txt  kinodynamic_SSTresult4.txt  kinodynamic_SSTresult5.txt  kinodynamic_result.txt  path2.txt  path3.txt  path4.txt  path_result.txt  processKinodynamicPath.m  processPath.m  three_d_dynamics.m  two_d_dynamics.m  visualization.m
(+4 files in other folders)
